Make header text align center to wrap correctly

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 /* Heading */
 h1 {
   margin: 40px;
+  text-align: center;
 
   font-family: "Diplomata", serif;
   font-weight: 400;
